added sequelize index.js and userProfile models, added db/schema.sql and seeders/seed_userProfile.sql, and 2 test routes /api/testserver  and /api/testdb

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "root",
         "password": "password",
-        "database": "bucketbuddy_db",
+        "database": "roadtriphero_db",
         "host": "127.0.0.1",
         "dialect": "mysql",
         "operatorsAliases": false
@@ -19,7 +19,7 @@
         "username": "pz6qjw63ldw0zu2a",
         "password": "yn86j2jbiqe7ji4z",
         "database": "qxebasxkj0t6kx7n",
-        "host": "c584md9egjnm02sk.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+        "host": "",
         "dialect": "mysql",
         "operatorsAliases": false
     }
