--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
         "operatorsAliases": false
     },
     "production": {
-        "username": "pz6qjw63ldw0zu2a",
-        "password": "yn86j2jbiqe7ji4z",
-        "database": "qxebasxkj0t6kx7n",
-        "host": "",
+        "username": "l9eacuexypqxwvu1",
+        "password": "yabs8e92vnh08h6e",
+        "database": "vx0o1om7on950dgk",
+        "host": "v02yrnuhptcod7dk.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "dialect": "mysql",
         "operatorsAliases": false
     }
