--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.6.11",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
-    "sequelize": "^5.17.2"
+    "sequelize": "^5.17.2",
+    "zipcodes": "^8.0.0"
   }
 }
