--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactjs-videobg": "^1.2.2",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
