--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@trendmicro/react-sidenav": "^0.4.5",
     "firebase": "^6.5.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
