--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@trendmicro/react-sidenav": "^0.4.5",
+    "axios": "^0.19.0",
     "firebase": "^6.5.0",
     "font-awesome": "^4.7.0",
     "react": "^16.9.0",
