--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "firebase": "^6.5.0",
+    "leaflet": "^1.5.1",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
+    "react-leaflet": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactjs-videobg": "^1.2.2",
