--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
+    "axios": "^0.19.0",
     "firebase": "^6.5.0",
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
