--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.6.11",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "node-geocoder": "^3.24.0",
     "react-google-maps": "^9.4.5",
     "reversegeocode-to-zip": "^1.0.6",
     "sequelize": "^5.17.2",
